[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01a"
path = "src/day01a.rs"

[[bin]]
name = "day01b"
path = "src/day01b.rs"

[[bin]]
name = "day02a"
path = "src/day02a.rs"

[[bin]]
name = "day02b"
path = "src/day02b.rs"

[dependencies]
itertools = "0.10.1"