[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01a"
path = "src/day01a.rs"

[[bin]]
name = "day01b"
path = "src/day01b.rs"

[[bin]]
name = "day02a"
path = "src/day02a.rs"

[[bin]]
name = "day02b"
path = "src/day02b.rs"

[[bin]]
name = "day03a"
path = "src/day03a.rs"

[[bin]]
name = "day03b"
path = "src/day03b.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[dependencies]
itertools = "0.10.1"